src/app/app.component.scss
/* You can add global styles to this file, and also import other style files */
@import "src/default";
@import 'bootstrap/scss/mixins';

#head {
  padding-top: 0.5rem;
  margin-bottom: 8px;
}

#logo {
  margin-left: 0;
  width: 100%;
  object-fit: contain;
  max-height: $head-logo-height;

  @include media-breakpoint-up(md) {
    width: $head-logo-width;
    height: $head-logo-height;
  }
}

.connectionError {
  margin-left: auto;
  margin-right: auto;
  font-size: 1.25rem !important;
  background-color: #f6ccdb;
}

#main {
  background-color: $primary-background-color;
}

#bottom-edge {
  height: $spacer*7;
  min-height: $spacer*7;
  max-height: $spacer*7;
  margin-bottom: $spacer;
  background: linear-gradient(175deg, $primary-background-color 49.5%, transparent 50.5%) no-repeat bottom;
}

@include media-breakpoint-up(lg) {
  #main {
    padding-bottom: 7.75rem !important;
  }
}

